--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+      integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
@@ -24,23 +31,31 @@
   </head>
   <body>
     <div class="container">
-      <div class="card">
-        <div class="card-header">
+      <div class="card-default">
+        <div class="card-header-default">
           <button
-            class="btn btn-info"
+            class="button-default"
             data-bs-toggle="modal"
-            data-bs-target="#modalQuestion"
+            data-bs-target="#modalUser"
           >
-            Nova pergunta
+            Novo usuário
           </button>
           <div class="removeItemSpace"></div>
         </div>
-        <div class="card-body">
-          <input type="text" id="inputSearch" />
-          <table class="table">
+        <div class="card-body-default">
+          <h3 class="title">Lista de usuários</h3>
+
+          <div class="input-search">
+            <i class="fas fa-search"></i>
+            <input type="text" id="inputSearch" placeholder="Pesquisar..." />
+          </div>
+
+          <table class="table table-hover">
             <thead>
               <tr>
-                <th scope="col"></th>
+                <th scope="col" class="firstColumn">
+                  <input id="selectAll" type="checkbox" />
+                </th>
                 <th scope="col">id</th>
                 <th scope="col">First</th>
                 <th scope="col">Last</th>
@@ -51,14 +66,14 @@
             </thead>
             <tbody></tbody>
           </table>
-          <div class="counterRowsTable">Contador: <span>0</span></div>
+          <div class="counterRowsTable"></div>
         </div>
       </div>
     </div>
 
     <div
       class="modal fade"
-      id="modalQuestion"
+      id="modalUser"
       tabindex="-1"
       aria-labelledby="exampleModalLabel"
       aria-hidden="true"
@@ -66,7 +81,7 @@
       <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title">Nova pergunta</h5>
+            <h5 class="modal-title">Novo usuário</h5>
             <button
               type="button"
               class="btn-close"
@@ -77,96 +92,33 @@
           <div class="modal-body">
             <form id="formQuest">
               <div class="mb-3">
-                <label for="first" class="form-label">Nome</label>
                 <input
                   type="text"
-                  class="form-control"
+                  class="form-control-default"
                   name="first"
                   id="first"
                   placeholder="Insira seu nome"
                 />
               </div>
               <div class="mb-3">
-                <label for="last" class="form-label">Sobrenome</label>
                 <input
                   type="text"
-                  class="form-control"
+                  class="form-control-default"
                   name="last"
                   id="last"
                   placeholder="Insira seu nome"
                 />
               </div>
               <div class="mb-3">
-                <label for="email" class="form-label">Email</label>
                 <input
                   type="email"
-                  class="form-control"
+                  class="form-control-default"
                   name="email"
                   id="email"
                   placeholder="name@example.com"
                 />
               </div>
-              <button>Criar</button>
-            </form>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div
-      class="modal fade"
-      id="editModal"
-      tabindex="-1"
-      role="dialog"
-      aria-labelledby="exampleModalLabel"
-      aria-hidden="true"
-    >
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="labelModalEdit">Modal title</h5>
-            <button
-              type="button"
-              class="close"
-              data-dismiss="modal"
-              aria-label="Close"
-            >
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body">
-            <form>
-              <div class="mb-3">
-                <label for="first" class="form-label">Nome</label>
-                <input
-                  type="text"
-                  class="form-control"
-                  name="first"
-                  id="firstEdit"
-                  placeholder="Insira seu nome"
-                />
-              </div>
-              <div class="mb-3">
-                <label for="last" class="form-label">Sobrenome</label>
-                <input
-                  type="text"
-                  class="form-control"
-                  name="last"
-                  id="lastEdit"
-                  placeholder="Insira seu nome"
-                />
-              </div>
-              <div class="mb-3">
-                <label for="email" class="form-label">Email</label>
-                <input
-                  type="email"
-                  class="form-control"
-                  name="email"
-                  id="emailEdit"
-                  placeholder="name@example.com"
-                />
-              </div>
-              <button>Criar</button>
+              <button class="create-button-default">Criar</button>
             </form>
           </div>
         </div>
